--- a/Assets/stylesheet.css
+++ b/Assets/stylesheet.css
@@ -10,7 +10,9 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+
 }
+
 
 body {
   font-family: sans-serif;
@@ -21,6 +23,9 @@ body {
   padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
+  display: flex;
+  justify-content:center;
+  align-items: center;
 }
 
 header {
@@ -30,46 +35,24 @@ header {
   color: hsl(206, 17%, 28%);
 }
 
-.card {
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 5px;
-  border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
-  font-size: 18px;
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 30px 40px;
+#startQuiz, #questions, #end {
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
 }
 
-.card-header::after {
-  content: " ";
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
-}
-
-.card-body {
-  min-height: 100px;
-}
-
-.card-footer {
-  text-align: center;
-}
-
-.card-footer::before {
-  content: " ";
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
-}
-
-.card-footer::after {
-  content: " ";
-  display: block;
-  clear: both;
+#start {
+    background-color: rgb(114, 8, 175);
+    border-radius: 10px;
+    border: none;
+    display: inline-block;
+    font-size: 22px;
+    line-height: 22px;
+    margin: 16px 16px 16px 20px;
+    padding: 14px 34px;
+    text-align: center;
+    cursor: pointer;
 }
 
 .btn {
@@ -97,7 +80,7 @@ button[disabled] {
   float: right;
 }
 
-#password {
+/* #password {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -116,7 +99,7 @@ button[disabled] {
   border-radius: 6px;
   resize: none;
   overflow: hidden;
-}
+} */
 
 @media (max-width: 690px) {
   .btn {
