got start button to disappear and choice boxes to appear when i click start button

--- a/Assets/stylesheet.css
+++ b/Assets/stylesheet.css
@@ -35,6 +35,10 @@ header {
   color: hsl(206, 17%, 28%);
 }
 
+.questionTitle {
+  display: flex;
+}
+
 #startQuiz, #questions, #end {
   display: flex;
   flex-direction: column;
