--- a/Assets/stylesheet.css
+++ b/Assets/stylesheet.css
@@ -39,14 +39,28 @@ header {
   display: flex;
 }
 
+ .choice {
+  background-color: rgb(114, 8, 175);
+  border-radius: 10px;
+  border: none;
+  display: inline-block;
+  font-size: 22px;
+  line-height: 22px;
+  margin: 16px 16px 16px 20px;
+  padding: 14px 34px;
+  text-align: center;
+  cursor: pointer;
+}
+
 #startQuiz, #questions, #end {
   display: flex;
   flex-direction: column;
   justify-content:center;
   align-items: center;
+  
 }
 
-#start {
+#startQuizBtn {
     background-color: rgb(114, 8, 175);
     border-radius: 10px;
     border: none;
@@ -59,7 +73,7 @@ header {
     cursor: pointer;
 }
 
-.btn {
+#btn {
   border: none;
   background-color: rgb(114, 8, 175);
   border-radius: 10px;
@@ -83,27 +97,6 @@ button[disabled] {
 .float-right {
   float: right;
 }
-
-/* #password {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: none;
-  display: block;
-  width: 100%;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 85px;
-  font-size: 1.2rem;
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
-  border-radius: 6px;
-  resize: none;
-  overflow: hidden;
-} */
 
 @media (max-width: 690px) {
   .btn {
